--- a/client/react-app/styles/sections/CoupleBlock.scss
+++ b/client/react-app/styles/sections/CoupleBlock.scss
@@ -7,9 +7,10 @@
 	justify-content: center;
 	position: relative;
 	z-index: 11;
-	/* WebKit-based browsers */
 	overflow-x: clip;
-	
+	height: 700px;
+
+	@media screen and (max-width: 1200px) {}
 	// Media query for smaller screens
 	@media (max-width: 768px) {
 		min-height: auto;
@@ -22,31 +23,32 @@
 
 		-webkit-mask-image: url("../../img/couple_mask.svg");
 		-webkit-mask-repeat: no-repeat;
-		-webkit-mask-position: center center;
-		-webkit-mask-size: cover;
+		-webkit-mask-position: top top;
+		-webkit-mask-size: 100% 100%;
 	
 		mask-image: url("../../img/couple_mask.svg");
 		mask-repeat: no-repeat;
-		mask-position: center center;
+		mask-position: top top;
 		mask-size: 100% 100%;
 		mask-mode: alpha;
-		top: -56px;
-		transform: scale(1.14);
+transform: scale(1.1);
 		position: relative;
 		margin-bottom: 2rem;
 		z-index: 0;
-		height:100vh;
 		position: absolute;
-		top: 0;
+		top: -20px;
 		left: 0;
 		right: 0;
-		
+		bottom: 0;
+		height: 100vh;
+		max-height: 800px;
+
 		@media (max-width: 768px) {
 			margin-bottom: 1.5rem;
 		}
 		.couple_image{
 			width: 100%;
-			height: 100vh;
+			height: 950px;
 			background-image: url("../../img/couple.png");
 			background-size: cover;
 			background-position: center center;
@@ -70,11 +72,6 @@
 			align-items: center;
 			font-weight: 300;
 			color: white;
-
-			@media (max-width: 768px) {
-				font-size: 1.6rem;
-			}
-
 			span {
 				&:first-child {
 					font-weight: 700; // Days/Hours/Minutes/Seconds number
@@ -93,9 +90,5 @@
 		font-size: 4rem;
 		z-index: 1;
 		color: white;
-
-		@media (max-width: 768px) {
-			font-size: 1.2rem;
-		}
 	}
 }
