--- a/client/react-app/styles/sections/DressCodeBlock.scss
+++ b/client/react-app/styles/sections/DressCodeBlock.scss
@@ -7,7 +7,15 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-overflow-x: clip;
+	overflow-x: clip;
+	@media screen and (max-width: 1500px) {
+	padding-bottom: 0;
+	}
+	@media screen and (max-width: 992px) {
+		padding-top: 5rem;
+		padding-bottom: 0;
+	}
+
 	@mixin dress_code_block_bg {
 		position: absolute;
 		top: 0;
@@ -24,30 +32,45 @@ overflow-x: clip;
 		img {
 			transform: scale(1.1) scaleX(1.7) scaleY(1.1) rotate(0deg);
 			user-select: none;
+			@media screen and (max-width: 992px) {
+				transform: scale(1.1) scaleX(1.2) scaleY(1) rotate(0deg);
+			}
 		}
 	}
 
 	.dress_code_block_men_bg {
 		@include dress_code_block_bg;
-		top: 720px;
+		top: 650px;
 		height: 850px;
-@media screen and (max-width: 1200px) {
-top: 650px;
-}
+		@media screen and (max-width: 1200px) {
+			top: 700px;
+		}
+		@media screen and (max-width: 992px) {
+			left: -14%;
+			top: 650px;
+		}
 		img {
 			transform: scale(1.1) scaleX(-1.7) scaleY(1.2) rotate(6deg);
 			filter: $pinkFilter;
 			user-select: none;
+			@media screen and (max-width: 1200px) {
+				transform: scale(1) scaleX(-1.2) scaleY(1.2) rotate(19deg);
+			}
+			@media screen and (max-width: 992px) {
+				transform: scale(1) scaleX(-1.2) scaleY(1) rotate(19deg);
+			
+			}
+			
 		}
 	}
 	.dress_code_block_women_bg,
-		.dress_code_block_men_bg {
-		img{
+	.dress_code_block_men_bg {
+		img {
 			@media screen and (max-width: 1200px) {
-			width: auto !important;
+				width: auto !important;
 			}
 		}
-		}
+	}
 
 	.dress_code_content {
 		z-index: 1;
@@ -78,34 +101,31 @@ top: 650px;
 			}
 		}
 
-		@media (max-width: 767px) {
-			padding: 2rem 1rem;
-
-			h2 {
-				font-size: 1.6rem;
-			}
-
-			p {
-				font-size: 1rem;
-			}
-		}
-
 		.dress_code_block_colors {
 			position: relative;
 			width: 800px;
 			height: 400px;
 			&:first-of-type {
 				margin-bottom: 250px;
+				@media screen and (max-width: 992px) {
+					margin-bottom: 200px;
+				}
 			}
 			&:last-of-type {
 				margin-bottom: 200px;
+				@media screen and (max-width: 992px) {
+					margin-bottom: 70px;
+				}
 			}
 			// We won’t use a simple horizontal row layout now because we want a scattered effect
 			.color_item {
 				position: absolute;
 				width: 200px;
 				height: 200px;
-
+				@media screen and (max-width: 992px) {
+					width: 175px;
+					height: 175px;
+				}
 				.colorImage {
 					width: 100%;
 					height: 100%;
@@ -139,6 +159,9 @@ top: 650px;
 			.color_item:nth-child(1) {
 				top: 10px;
 				left: 0;
+				@media screen and (max-width: 992px) {
+					left: 50px;
+				}
 			}
 
 			.color_item:nth-child(2) {
@@ -149,6 +172,9 @@ top: 650px;
 			.color_item:nth-child(3) {
 				top: 20px;
 				right: 0;
+				@media screen and (max-width: 992px) {
+					right: 50px;
+				}
 			}
 
 			.color_item:nth-child(4) {
@@ -159,6 +185,10 @@ top: 650px;
 			.color_item:nth-child(5) {
 				top: 200px;
 				right: 135px;
+				@media screen and (max-width: 992px) {
+					top: 220px;
+					right: 160px;
+				}
 			}
 		}
 	}
