--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -3,13 +3,19 @@
 .hero_section {
 	position: relative;
 	width: 100%;
-	overflow: hidden; /* Ensures falling hearts are clipped within hero section */
+	overflow: hidden;
+	/* Ensures falling hearts are clipped within hero section */
 	color: $primary-color;
 	z-index: 0;
 
+	@media screen and (max-width: 768px) {
+		min-height: 100vh;
+	}
+
 	.hero_content {
 		position: relative;
-		z-index: 10; /* Content above falling hearts */
+		z-index: 10;
+		/* Content above falling hearts */
 		max-width: 1400px;
 		margin: 0 auto;
 		padding: 4rem 1rem;
@@ -20,7 +26,6 @@
 		align-items: center;
 		flex-direction: row;
 		column-gap: 4vw;
-		height: 100vh;
 		@media screen and (max-width: 1500px) {
 			column-gap: 2vw;
 		}
@@ -31,31 +36,43 @@
 			flex-direction: column;
 			height: fit-content;
 		}
-		@media (max-width: 768px) {
-			padding: 2rem 1rem;
+		@media screen and (max-width: 768px) {
+			height: 100vh;
+			padding: 0 4vw;
 		}
 		.hero_content_text {
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
+			@media screen and (max-width: 576px) {
+			gap: 10px;
+			}
 		}
 
 		.hero_content_dear {
 			font-size: 1.4em;
+			@media screen and (max-width: 576px) {
+			}
 		}
 		h1 {
-			font-size: 3.5em;
+					font-size: 3.5em;
+
 			@media screen and (max-width: 1500px) {
 				font-size: 3.3em;
 			}
 			@media screen and (max-width: 1300px) {
 				font-size: 2.9em;
 			}
-			@media screen and (max-width: 768px) {
-				font-size: 2em;
+			@media screen and (max-width: 576px) {
+			font-size: 2.5em;
+		}
+		@media screen and (max-width: 450px) {
+				font-size: 2.2em;
+			
 			}
 			span {
-				color: $button-bg-color; /* Example color for date */
+				color: $button-bg-color;
+				/* Example color for date */
 			}
 		}
 		h2 {
@@ -67,6 +84,12 @@
 			}
 			@media screen and (max-width: 1300px) {
 				font-size: 1.3em;
+			}
+			@media screen and (max-width: 576px) {
+			font-size: 1.2em;
+			}
+			@media screen and (max-width: 450px) {
+			font-size: 1em;
 			}
 		}
 
@@ -84,6 +107,7 @@
 				height: 650px;
 				width: auto;
 				z-index: 1;
+				
 				@media screen and (min-width: 1400px) and (min-height: 800px) {
 					height: 650px;
 				}
@@ -96,8 +120,26 @@
 				@media screen and (max-width: 1200px) {
 					height: 500px;
 				}
+
+				@media screen and (max-width: 576px) {
+					width: 86vw;
+					height: auto;
+				}
+				@media screen and (max-width: 450px) {
+					width: 100vw;
+					height: auto;
+				}
+				@media screen and (max-width: 450px) and (max-height: 750px) {
+					width: 88vw;
+				}
 			}
 		}
+
+		.city,
+		h1 {
+			color: $pink-color;
+		}
+
 		.city {
 			font-size: 2em;
 			@media screen and (max-width: 1300px) {
@@ -106,13 +148,17 @@
 			@media screen and (max-width: 1200px) {
 				margin-top: -30px;
 				font-size: 2em;
+				color:  $primary-color;
+			}
+			@media screen and (max-width: 576px) {
+			margin-top: 0;
+			}
+			@media screen and (max-width: 450px) and (max-height: 750px) {
+				margin-top: -10px;
+
 			}
 		}
 
-		.city,
-		h1 {
-			color: $pink-color;
-		}
 	}
 
 	/*************
@@ -123,7 +169,8 @@
 		top: 0;
 		left: 0;
 		width: 100vw;
-		height: 100vh; /* or another fixed height */
+		height: 100vh;
+		/* or another fixed height */
 		overflow: hidden;
 		pointer-events: none;
 		z-index: 10;
