--- a/client/react-app/styles/sections/InvitationFooter.scss
+++ b/client/react-app/styles/sections/InvitationFooter.scss
@@ -4,26 +4,32 @@
 	padding: 200px 2rem;
 	text-align: center;
 	background-color: white;
-
+	@media screen and (max-width: 1200px) {
+		padding-top: 250px;
+		font-size: 0.85em;
+	}
 	p {
-		font-size: 3rem;
-		line-height: 1.4;
-		margin-bottom: 1rem;
+		font-size: 2em;
+		margin-bottom: 16px;
 		color: #2c3e50;
+		line-height: 1.4;
+		@media screen and (max-width: 992px) {
+			padding: 0 4vw;
+		}
+		}
 
 		strong {
 			@include headerWithRay($size: 80px, $offset: 30px);
 			color: $primary-color;
 
-			&::before,
-			&::after {
-				filter: $pinkFilter;
-			}
+		&::before,
+		&::after {
+			filter: $pinkFilter;
 		}
 	}
 
 	.creator {
-		font-size: 1.7rem;
+		font-size: 1.1em;
 		color: $primary-color;
 		position: absolute;
 		left: 0;
