--- a/client/react-app/styles/common/header.scss
+++ b/client/react-app/styles/common/header.scss
@@ -10,20 +10,19 @@
 	transition: all 0.8s ease;
 	font-size: 0.7em;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-	rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+		rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 	background-color: $bg-color-pink;
 
 	@media screen and (max-width: 768px) {
-
 		background-color: transparent;
 		box-shadow: none;
-
 	}
 
-
 	@media (max-width: 500px) {
-		width: 100vw;
+		width: fit-content;
 		padding: 0px 4vw;
+		left: auto;
+		right: 0;
 	}
 	div {
 		height: inherit;
@@ -36,7 +35,6 @@
 		height: 100%;
 		position: relative;
 		@media screen and (max-width: 768px) {
-
 			justify-content: flex-end;
 		}
 
@@ -54,8 +52,8 @@
 			align-items: center;
 			flex-direction: row;
 			column-gap: 4vw;
-@media (max-width: 992px) {
-	column-gap: 2vw;
+			@media (max-width: 992px) {
+				column-gap: 2vw;
 			}
 			@media screen and (max-width: 768px) {
 				display: none;
@@ -177,18 +175,18 @@
 				border-radius: 50%;
 				margin-top: 16px;
 				box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-				rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-				}
-				}
+					rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+			}
+		}
 
-				.toggle {
-					display: block;
-					cursor: pointer;
+		.toggle {
+			display: block;
+			cursor: pointer;
 
 			input {
 				display: none;
 
-				&+div {
+				& + div {
 					width: 27px;
 					height: 27px;
 					position: relative;
@@ -231,8 +229,7 @@
 								border-radius: 1.5px;
 								background: $color;
 								position: absolute;
-								transition: transform 0.5s ease,
-									background 0.4s ease;
+								transition: transform 0.5s ease, background 0.4s ease;
 							}
 
 							&:before {
@@ -241,22 +238,22 @@
 								transform: translate(1px, 0) scaleX(1.1);
 							}
 
-								&:after {
-									right: 0;
-									transform-origin: 100% 50%;
-									transform: translate(-1px, 0) scaleX(1.1);
-								}
-								}
-								}
+							&:after {
+								right: 0;
+								transform-origin: 100% 50%;
+								transform: translate(-1px, 0) scaleX(1.1);
+							}
+						}
+					}
 
-								svg {
-									display: block;
-									fill: none;
-									stroke: $color;
-									stroke-width: 2px;
-									width: 44px;
-									height: 44px;
-									stroke-linecap: round;
+					svg {
+						display: block;
+						fill: none;
+						stroke: $color;
+						stroke-width: 2px;
+						width: 44px;
+						height: 44px;
+						stroke-linecap: round;
 						position: absolute;
 						left: 50%;
 						top: 50%;
@@ -265,48 +262,50 @@
 						stroke-dashoffset: 82.801;
 						transform-origin: 50% 50%;
 						transition: stroke-dashoffset 0.5s ease,
-						stroke-dasharray 0.6s ease,
-						transform 0.5s ease,
-						stroke 0.4s ease;
+							stroke-dasharray 0.6s ease, transform 0.5s ease,
+							stroke 0.4s ease;
 
 						&:nth-child(3) {
 							transform: rotate(180deg);
 						}
-						}
-						}
+					}
+				}
 
-						&:checked+div {
-							div {
-								transform: rotate(90deg);
+				&:checked + div {
+					div {
+						transform: rotate(90deg);
 
-								span {
+						span {
+							&:before,
+							&:after {
+								background: $active;
+							}
 
-									&:before,
-									&:after {
-										background: $active;
-									}
+							&:first-child {
+								&:before {
+									transform: rotate(45deg) translate(2.2px, -3px)
+										scaleX(1.05);
+								}
 
-									&:first-child {
-										&:before {
-											transform: rotate(45deg) translate(2.2px, -3px) scaleX(1.05);
-										}
-
-										&:after {
-											transform: rotate(-45deg) translate(-2.2px, -3px) scaleX(1.05);
-										}
-									}
-
-									&:last-child {
-										&:before {
-											transform: rotate(-45deg) translate(2.2px, 3px) scaleX(1.05);
-										}
-
-										&:after {
-											transform: rotate(45deg) translate(-2.2px, 3px) scaleX(1.05);
-										}
-									}
+								&:after {
+									transform: rotate(-45deg) translate(-2.2px, -3px)
+										scaleX(1.05);
 								}
 							}
+
+							&:last-child {
+								&:before {
+									transform: rotate(-45deg) translate(2.2px, 3px)
+										scaleX(1.05);
+								}
+
+								&:after {
+									transform: rotate(45deg) translate(-2.2px, 3px)
+										scaleX(1.05);
+								}
+							}
+						}
+					}
 
 					svg {
 						stroke-dashoffset: 62;
@@ -317,7 +316,7 @@
 						&:nth-child(3) {
 							transform: rotate(270deg);
 						}
-						}
+					}
 				}
 			}
 		}
