--- a/client/react-app/styles/sections/ChatBlock.scss
+++ b/client/react-app/styles/sections/ChatBlock.scss
@@ -11,6 +11,9 @@
 	@media screen and (max-width: 1200px) {
 		min-height: 700px;
 	}
+	@media screen and (max-width: 768px) {
+		min-height: 850px;
+	}
 
 	.chat_block_bg {
 		position: absolute;
@@ -19,6 +22,15 @@
 		width: 100%;
 		height: 720px;
 		z-index: 0;
+		@media screen and (max-width: 576px) {
+			left: -100px;
+		}
+		@media screen and (max-width: 450px) {
+			left: -150px;
+		}
+		@media screen and (max-width: 400px) {
+			left: -190px;
+		}
 		img {
 			width: auto;
 			position: absolute;
@@ -40,6 +52,9 @@
 				transform: scale(2);
 				top: 55% !important;
 			}
+			@media screen and (max-width: 768px) {
+				width: auto !important;
+			}
 		}
 	}
 
@@ -53,12 +68,34 @@
 		@media screen and (max-width: 1200px) {
 			padding-top: 120px;
 		}
+		@media screen and (max-width: 768px) {
+			padding-top: 70px;
+		}
+		@media screen and (max-width: 400px) {
+			padding-top: 30px;
+		}
 
 		h2 {
 			@include headerWithRay($size: 80px, $offset: 30px);
 			font-size: 4.5rem;
 			color: white;
 
+			@media screen and (max-width: 576px) {
+				@include headerWithRay($size: 60px, $offset: 25px);
+				font-size: 3.5rem !important;
+			}
+			@media screen and (max-width: 500px) {
+				@include headerWithRay($size: 50px, $offset: 22px);
+				font-size: 3.2rem !important;
+			}
+			@media screen and (max-width: 500px) {
+				@include headerWithRay($size: 40px, $offset: 22px);
+				font-size: 3rem !important;
+			}
+			@media screen and (max-width: 400px) {
+				@include headerWithRay($size: 40px, $offset: 22px);
+				font-size: 2.7rem !important;
+			}
 			&::before,
 			&::after {
 				filter: $pinkFilter;
@@ -72,6 +109,26 @@
 			margin-top: 50px;
 			margin-bottom: 30px;
 			text-align: center;
+			@media screen and (max-width: 992px) {
+				max-width: 96vw;
+			}
+			@media screen and (max-width: 768px) {
+				font-size: 2.1rem;
+				margin-bottom: 50px;
+			}
+			@media screen and (max-width: 576px) {
+				font-size: 1.9rem;
+				margin: 30px 0;
+				max-width: 94vw;
+			}
+			@media screen and (max-width: 450px) {
+				line-height: 115%;
+				font-size: 1.7rem;
+			}
+			@media screen and (max-width: 400px) {
+				margin-top: 20px;
+			}
+			
 		}
 		.chat_block_btn_wrapper {
 			position: relative;
@@ -98,7 +155,11 @@
 				@media screen and (max-width: 1200px) {
 					transform: rotate(127deg) scale(1);
 					left: 150%;
-				
+				}
+				@media screen and (max-width: 768px) {
+					left: 74%;
+				transform: rotate(163deg) scale(1);
+				top: 0%;
 				}
 			}
 		}
