--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -26,6 +26,8 @@
 		align-items: center;
 		flex-direction: row;
 		column-gap: 4vw;
+		height: 100vh;
+
 		@media screen and (max-width: 1500px) {
 			column-gap: 2vw;
 		}
@@ -40,22 +42,35 @@
 			height: 100vh;
 			padding: 0 4vw;
 		}
+
+		@media screen and (max-width: 500px) and (max-height: 700px) {
+			justify-content: flex-start;
+			top: 5vh;
+		}
+		@media screen and (max-width: 576px) {
+			padding: 0 2vw;
+		}
+
 		.hero_content_text {
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
 			@media screen and (max-width: 576px) {
-			gap: 10px;
+				gap: 10px;
 			}
 		}
 
 		.hero_content_dear {
 			font-size: 1.4em;
 			@media screen and (max-width: 576px) {
+				font-size: 1.3em;
+			}
+			@media screen and (max-width: 450px) {
+				font-size: 1.2em;
 			}
 		}
 		h1 {
-					font-size: 3.5em;
+			font-size: 3.5em;
 
 			@media screen and (max-width: 1500px) {
 				font-size: 3.3em;
@@ -64,11 +79,16 @@
 				font-size: 2.9em;
 			}
 			@media screen and (max-width: 576px) {
-			font-size: 2.5em;
-		}
-		@media screen and (max-width: 450px) {
-				font-size: 2.2em;
-			
+				font-size: 2.5em;
+			}
+			@media screen and (max-width: 500px) and (max-height: 700px) {
+				font-size: 2em;
+			}
+			@media screen and (max-width: 450px) {
+				font-size: 2.1em;
+			}
+			@media screen and (max-width: 375px) {
+				font-size: 2em;
 			}
 			span {
 				color: $button-bg-color;
@@ -86,10 +106,13 @@
 				font-size: 1.3em;
 			}
 			@media screen and (max-width: 576px) {
-			font-size: 1.2em;
+				font-size: 1.2em;
 			}
 			@media screen and (max-width: 450px) {
-			font-size: 1em;
+				font-size: 1.1em;
+			}
+			@media screen and (max-width: 375px) {
+				font-size: 1em;
 			}
 		}
 
@@ -107,7 +130,7 @@
 				height: 650px;
 				width: auto;
 				z-index: 1;
-				
+
 				@media screen and (min-width: 1400px) and (min-height: 800px) {
 					height: 650px;
 				}
@@ -148,17 +171,16 @@
 			@media screen and (max-width: 1200px) {
 				margin-top: -30px;
 				font-size: 2em;
-				color:  $primary-color;
+				color: $primary-color;
 			}
 			@media screen and (max-width: 576px) {
-			margin-top: 0;
+				margin-top: 0;
 			}
-			@media screen and (max-width: 450px) and (max-height: 750px) {
-				margin-top: -10px;
-
+			@media screen and (max-width: 500px) and (max-height: 800px) {
+				margin-top: -20px;
+				font-size: 1.6em;
 			}
 		}
-
 	}
 
 	/*************
